--- a/package.json
+++ b/package.json
@@ -23,10 +23,15 @@
 		"@auth/prisma-adapter": "^2.7.2",
 		"@hookform/resolvers": "^5.1.1",
 		"@prisma/client": "^6.5.0",
+		"@radix-ui/react-accordion": "^1.2.11",
+		"@radix-ui/react-dialog": "^1.1.14",
 		"@radix-ui/react-label": "^2.1.7",
+		"@radix-ui/react-popover": "^1.1.14",
+		"@radix-ui/react-progress": "^1.1.7",
 		"@radix-ui/react-select": "^2.2.5",
 		"@radix-ui/react-separator": "^1.1.7",
 		"@radix-ui/react-slot": "^1.2.3",
+		"@radix-ui/react-tooltip": "^1.2.7",
 		"@t3-oss/env-nextjs": "^0.12.0",
 		"@tanstack/react-query": "^5.69.0",
 		"@trpc/client": "^11.0.0",
@@ -37,10 +42,12 @@
 		"lucide-react": "^0.523.0",
 		"next": "^15.2.3",
 		"next-auth": "5.0.0-beta.25",
+		"next-themes": "^0.4.6",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.58.1",
 		"server-only": "^0.0.1",
+		"sonner": "^2.0.5",
 		"superjson": "^2.2.1",
 		"tailwind-merge": "^3.3.1",
 		"zod": "^3.25.67"
